fix(css): fixed panelCollapsed icons

--- a/manager/media/style/default/css/main.css
+++ b/manager/media/style/default/css/main.css
@@ -117,12 +117,10 @@ table th { font-weight: 500; }
 /* nav */
 .no-events { pointer-events: none; }
 /* Required for Bootstrap3 Collapse */
-.panel-title > a::before { content: "\f107"; /* fa-angle-down */
-font-family: "Font Awesome 5 Free"; }
-.panel-title > a.collapsed::before { content: "\f105"; /* fa-angle-right */
-padding: 0 1px 0 3px; }
 .panel-title > a { font-size: 1.1em; color: #657587; display: block; padding: 3px 0; }
 .panel-title > a:hover { text-decoration: none; color: #1377c5; background: rgba(255, 255, 255, 0.27); }
+.panel-title > a > i::before { content: "\f107"; /* fa-angle-down */ }
+.panel-title > a.collapsed > i::before { content: "\f105"; /* fa-angle-right */ }
 /* category icons in manage elements */
 #site_templates, #site_tmplvars, #site_htmlsnippets, #site_snippets, #site_plugins { padding-left: 0; }
 #site_templates li, #site_tmplvars li, #site_htmlsnippets li, #site_snippets li, #site_modules li, #site_plugins li, #categories_list li { list-style: none; margin-left: -21px; }
